deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: battlefield6
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: battlefield6-live-tls
      hosts:
        - battlefield6.lol
  rules:
    - host: battlefield6.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: battlefield6
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: battlefield6-www-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://battlefield6.lol
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: battlefield6-live-tls
      hosts:
        - www.battlefield6.lol
  rules:
    - host: www.battlefield6.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: battlefield6
                port:
                  number: 80
